--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  /* background-color: #ECF0F1; */
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2C3E50; 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ECF0F1; 
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #18BC9C; /* Secondary Color */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: #E74C3C; /* Accent Color */
+  color: #ECF0F1;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  margin: 1rem;
 }
+
+button:hover {
+  background-color: #F39C12; /* Highlight Color */
+}
+
+
+
